sandbox/JoltC/Functions.h

typedef struct JPC_Vec3 {
	 float x;
	float y;
	float z;
	float _w;
} JPC_Vec3;
typedef struct JPC_Quat {
	 float x;
	float y;
	float z;
	float w;
} JPC_Quat;
typedef struct JPC_Body JPC_Body;
////////////////////////////////////////////////////////////////////////////////
// Shape -> RefTarget<Shape>

typedef struct JPC_Shape JPC_Shape;
////////////////////////////////////////////////////////////////////////////////
// String

typedef struct JPC_String JPC_String;
////////////////////////////////////////////////////////////////////////////////
// Constraint -> RefTarget<Constraint>

typedef struct JPC_Constraint JPC_Constraint;
////////////////////////////////////////////////////////////////////////////////
// DistanceConstraint -> TwoBodyConstraint -> Constraint -> RefTarget<Constraint>

typedef struct JPC_DistanceConstraint JPC_DistanceConstraint;
////////////////////////////////////////////////////////////////////////////////
// HingeConstraint

typedef struct JPC_HingeConstraint JPC_HingeConstraint;
////////////////////////////////////////////////////////////////////////////////
// SliderConstraint

typedef struct JPC_SliderConstraint JPC_SliderConstraint;
////////////////////////////////////////////////////////////////////////////////
// FixedConstraintSettings -> TwoBodyConstraintSettings -> ConstraintSettings

typedef struct JPC_FixedConstraintSettings {
	JPC_ConstraintSettings ConstraintSettings;

	// TwoBodyConstraintSettings: no extra members

	// FixedConstraintSettings
	JPC_ConstraintSpace Space;
	bool AutoDetectPoint;

	JPC_RVec3 Point1;
	JPC_Vec3 AxisX1;
	JPC_Vec3 AxisY1;

	JPC_RVec3 Point2;
	JPC_Vec3 AxisX2;
	JPC_Vec3 AxisY2;
} JPC_FixedConstraintSettings;
extern void JPC_FixedConstraintSettings_default(JPC_FixedConstraintSettings* settings);
extern JPC_Constraint* JPC_FixedConstraintSettings_Create(
	const JPC_FixedConstraintSettings* self,
	JPC_Body* inBody1,
	JPC_Body* inBody2);
////////////////////////////////////////////////////////////////////////////////
// SixDOFConstraintSettings -> TwoBodyConstraintSettings -> ConstraintSettings

typedef struct JPC_SixDOFConstraintSettings {
	JPC_ConstraintSettings ConstraintSettings;

	// TwoBodyConstraintSettings: no extra members

	// SixDOFConstraintSettings
	JPC_ConstraintSpace Space;

	JPC_RVec3 Position1;
	JPC_Vec3 AxisX1;
	JPC_Vec3 AxisY1;

	JPC_RVec3 Position2;
	JPC_Vec3 AxisX2;
	JPC_Vec3 AxisY2;

	float MaxFriction[6];

	float LimitMin[6];
	float LimitMax[6];

	// TODO: LimitsSpringSettings
} JPC_SixDOFConstraintSettings;
extern void JPC_SixDOFConstraintSettings_default(JPC_SixDOFConstraintSettings* settings);
extern JPC_Constraint* JPC_SixDOFConstraintSettings_Create(
	const JPC_SixDOFConstraintSettings* self,
	JPC_Body* inBody1,
	JPC_Body* inBody2);
////////////////////////////////////////////////////////////////////////////////
// HingeConstraintSettings -> TwoBodyConstraintSettings -> ConstraintSettings

typedef struct JPC_HingeConstraintSettings {
	JPC_ConstraintSettings ConstraintSettings;

	// TwoBodyConstraintSettings: no extra members

	// HingeConstraintSettings
	JPC_ConstraintSpace Space;

	JPC_RVec3 Point1;
	JPC_Vec3 HingeAxis1;
	JPC_Vec3 NormalAxis1;

	JPC_RVec3 Point2;
	JPC_Vec3 HingeAxis2;
	JPC_Vec3 NormalAxis2;

	float LimitsMin;
	float LimitsMax;

	JPC_SpringSettings LimitsSpringSettings;

	float MaxFrictionTorque;

	JPC_MotorSettings MotorSettings;
} JPC_HingeConstraintSettings;
extern void JPC_HingeConstraintSettings_default(JPC_HingeConstraintSettings* settings);
extern JPC_HingeConstraint* JPC_HingeConstraintSettings_Create(
	const JPC_HingeConstraintSettings* self,
	JPC_Body* inBody1,
	JPC_Body* inBody2);
////////////////////////////////////////////////////////////////////////////////
// DistanceConstraintSettings -> TwoBodyConstraintSettings -> ConstraintSettings

typedef struct JPC_DistanceConstraintSettings {
	JPC_ConstraintSettings ConstraintSettings;

	// TwoBodyConstraintSettings: no extra members

	// DistanceConstraintSettings
	JPC_ConstraintSpace Space;

	JPC_RVec3 Point1;
	JPC_RVec3 Point2;

	float MinDistance;
	float MaxDistance;

	JPC_SpringSettings LimitsSpringSettings;
} JPC_DistanceConstraintSettings;
extern void JPC_DistanceConstraintSettings_default(JPC_DistanceConstraintSettings* settings);
extern JPC_DistanceConstraint* JPC_DistanceConstraintSettings_Create(
	const JPC_DistanceConstraintSettings* self,
	JPC_Body* inBody1,
	JPC_Body* inBody2);
////////////////////////////////////////////////////////////////////////////////
// SliderConstraintSettings -> TwoBodyConstraintSettings -> ConstraintSettings

typedef struct JPC_SliderConstraintSettings {
	JPC_ConstraintSettings ConstraintSettings;

	// TwoBodyConstraintSettings: no extra members

	// SliderConstraintSettings
	JPC_ConstraintSpace Space;
	bool AutoDetectPoint;

	JPC_RVec3 Point1;
	JPC_Vec3 SliderAxis1;
	JPC_Vec3 NormalAxis1;

	JPC_RVec3 Point2;
	JPC_Vec3 SliderAxis2;
	JPC_Vec3 NormalAxis2;

	float LimitsMin;
	float LimitsMax;

	JPC_SpringSettings LimitsSpringSettings;

	float MaxFrictionForce;

	JPC_MotorSettings MotorSettings;
} JPC_SliderConstraintSettings;
extern void JPC_SliderConstraintSettings_default(JPC_SliderConstraintSettings* settings);
extern JPC_SliderConstraint* JPC_SliderConstraintSettings_Create(
	const JPC_SliderConstraintSettings* self,
	JPC_Body* inBody1,
	JPC_Body* inBody2);
////////////////////////////////////////////////////////////////////////////////
// TriangleShapeSettings

typedef struct JPC_TriangleShapeSettings {
	// ShapeSettings
	uint64_t UserData;

	// ConvexShapeSettings
	// TODO: Material
	float Density;

	// TriangleShapeSettings
	JPC_Vec3 V1;
	JPC_Vec3 V2;
	JPC_Vec3 V3;
	float ConvexRadius;
} JPC_TriangleShapeSettings;
extern void JPC_TriangleShapeSettings_default(JPC_TriangleShapeSettings* object);
extern bool JPC_TriangleShapeSettings_Create(const JPC_TriangleShapeSettings* self, JPC_Shape** outShape, JPC_String** outError);
////////////////////////////////////////////////////////////////////////////////
// MeshShapeSettings -> ShapeSettings

typedef struct JPC_MeshShapeSettings {
	// ShapeSettings
	uint64_t UserData;

	// MeshShapeSettings
	JPC_Float3* TriangleVertices;
	size_t TriangleVerticesLen;
	JPC_IndexedTriangle* IndexedTriangles;
	size_t IndexedTrianglesLen;
	// PhysicsMaterialList				mMaterials;
	// uint							mMaxTrianglesPerLeaf = 8;
	// float							mActiveEdgeCosThresholdAngle = 0.996195f;
	// bool							mPerTriangleUserData = false;
} JPC_MeshShapeSettings;
extern void JPC_MeshShapeSettings_default(JPC_MeshShapeSettings* object);
extern bool JPC_MeshShapeSettings_Create(const JPC_MeshShapeSettings* self, JPC_Shape** outShape, JPC_String** outError);
////////////////////////////////////////////////////////////////////////////////
// BoxShapeSettings -> ConvexShapeSettings -> ShapeSettings

typedef struct JPC_BoxShapeSettings {
	// ShapeSettings
	uint64_t UserData;

	// ConvexShapeSettings
	// TODO: Material
	float Density;

	// BoxShapeSettings
	JPC_Vec3 HalfExtent;
	float ConvexRadius;
} JPC_BoxShapeSettings;
extern void JPC_BoxShapeSettings_default(JPC_BoxShapeSettings* object);
extern bool JPC_BoxShapeSettings_Create(const JPC_BoxShapeSettings* self, JPC_Shape** outShape, JPC_String** outError);
////////////////////////////////////////////////////////////////////////////////
// SphereShapeSettings -> ConvexShapeSettings -> ShapeSettings

typedef struct JPC_SphereShapeSettings {
	// ShapeSettings
	uint64_t UserData;

	// ConvexShapeSettings
	// TODO: Material
	float Density;

	// SphereShapeSettings
	float Radius;
} JPC_SphereShapeSettings;
extern void JPC_SphereShapeSettings_default(JPC_SphereShapeSettings* object);
extern bool JPC_SphereShapeSettings_Create(const JPC_SphereShapeSettings* self, JPC_Shape** outShape, JPC_String** outError);
////////////////////////////////////////////////////////////////////////////////
// CapsuleShapeSettings -> ConvexShapeSettings -> ShapeSettings

typedef struct JPC_CapsuleShapeSettings {
	// ShapeSettings
	uint64_t UserData;

	// ConvexShapeSettings
	// TODO: Material
	float Density;

	// CapsuleShapeSettings
	float Radius;
	float HalfHeightOfCylinder;
} JPC_CapsuleShapeSettings;
extern void JPC_CapsuleShapeSettings_default(JPC_CapsuleShapeSettings* object);
extern bool JPC_CapsuleShapeSettings_Create(const JPC_CapsuleShapeSettings* self, JPC_Shape** outShape, JPC_String** outError);
////////////////////////////////////////////////////////////////////////////////
// CylinderShapeSettings -> ConvexShapeSettings -> ShapeSettings

typedef struct JPC_CylinderShapeSettings {
	// ShapeSettings
	uint64_t UserData;

	// ConvexShapeSettings
	// TODO: Material
	float Density;

	// CylinderShapeSettings
	float HalfHeight;
	float Radius;
	float ConvexRadius;
} JPC_CylinderShapeSettings;
extern void JPC_CylinderShapeSettings_default(JPC_CylinderShapeSettings* object);
extern bool JPC_CylinderShapeSettings_Create(const JPC_CylinderShapeSettings* self, JPC_Shape** outShape, JPC_String** outError);
////////////////////////////////////////////////////////////////////////////////
// ConvexHullShapeSettings -> ConvexShapeSettings -> ShapeSettings

typedef struct JPC_ConvexHullShapeSettings {
	// ShapeSettings
	uint64_t UserData;

	// ConvexShapeSettings
	// TODO: Material
	float Density;

	// ConvexHullShapeSettings
	const JPC_Vec3* Points;
	size_t PointsLen;
	float MaxConvexRadius;
	float MaxErrorConvexRadius;
	float HullTolerance;
} JPC_ConvexHullShapeSettings;
extern void JPC_ConvexHullShapeSettings_default(JPC_ConvexHullShapeSettings* object);
extern bool JPC_ConvexHullShapeSettings_Create(const JPC_ConvexHullShapeSettings* self, JPC_Shape** outShape, JPC_String** outError);
////////////////////////////////////////////////////////////////////////////////
// CompoundShape::SubShapeSettings

typedef struct JPC_SubShapeSettings {
	const JPC_Shape* Shape;
	JPC_Vec3 Position;
	JPC_Quat Rotation;
	uint32_t UserData;
} JPC_SubShapeSettings;
extern void JPC_SubShapeSettings_default(JPC_SubShapeSettings* object);
////////////////////////////////////////////////////////////////////////////////
// StaticCompoundShapeSettings -> CompoundShapeSettings -> ShapeSettings

typedef struct JPC_StaticCompoundShapeSettings {
	// ShapeSettings
	uint64_t UserData;

	// CompoundShapeSettings
	const JPC_SubShapeSettings* SubShapes;
	size_t SubShapesLen;

	// StaticCompoundShapeSettings
	// (no fields)
} JPC_StaticCompoundShapeSettings;
extern void JPC_StaticCompoundShapeSettings_default(JPC_StaticCompoundShapeSettings* object);
extern bool JPC_StaticCompoundShapeSettings_Create(const JPC_StaticCompoundShapeSettings* self, JPC_Shape** outShape, JPC_String** outError);
////////////////////////////////////////////////////////////////////////////////
// MutableCompoundShape -> CompoundShape -> Shape

typedef struct JPC_MutableCompoundShape JPC_MutableCompoundShape;
extern uint JPC_MutableCompoundShape_AddShape(
	JPC_MutableCompoundShape* self,
	JPC_Vec3 inPosition,
	JPC_Quat inRotation,
	const JPC_Shape* inShape,
	uint32_t inUserData);
extern void JPC_MutableCompoundShape_RemoveShape(JPC_MutableCompoundShape* self, uint inIndex);
extern void JPC_MutableCompoundShape_ModifyShape(JPC_MutableCompoundShape* self, uint inIndex, JPC_Vec3 inPosition, JPC_Quat inRotation);
extern void JPC_MutableCompoundShape_ModifyShape2(JPC_MutableCompoundShape* self, uint inIndex, JPC_Vec3 inPosition, JPC_Quat inRotation, const JPC_Shape* inShape);
extern void JPC_MutableCompoundShape_AdjustCenterOfMass(JPC_MutableCompoundShape* self);
// TODO:
// extern void JPC_MutableCompoundShape_ModifyShapes(JPC_MutableCompoundShape* self, ...);
// extern JPC_MutableCompoundShape* JPC_MutableCompoundShape_Clone(JPC_MutableCompoundShape* self);

////////////////////////////////////////////////////////////////////////////////
// MutableCompoundShapeSettings -> CompoundShapeSettings -> ShapeSettings

typedef struct JPC_MutableCompoundShapeSettings {
	// ShapeSettings
	uint64_t UserData;

	// CompoundShapeSettings
	const JPC_SubShapeSettings* SubShapes;
	size_t SubShapesLen;

	// MutableCompoundShapeSettings
	// (no fields)
} JPC_MutableCompoundShapeSettings;
extern void JPC_MutableCompoundShapeSettings_default(JPC_MutableCompoundShapeSettings* object);
extern bool JPC_MutableCompoundShapeSettings_Create(const JPC_MutableCompoundShapeSettings* self, JPC_MutableCompoundShape** outShape, JPC_String** outError);
////////////////////////////////////////////////////////////////////////////////
// BodyCreationSettings

typedef struct JPC_BodyCreationSettings {
	JPC_RVec3 Position;
	JPC_Quat Rotation;
	JPC_Vec3 LinearVelocity;
	JPC_Vec3 AngularVelocity;
	uint64_t UserData;
	JPC_ObjectLayer ObjectLayer;
	// CollisionGroup CollisionGroup;
	JPC_MotionType MotionType;
	JPC_AllowedDOFs AllowedDOFs;
	bool AllowDynamicOrKinematic;
	bool IsSensor;
	bool CollideKinematicVsNonDynamic;
	bool UseManifoldReduction;
	bool ApplyGyroscopicForce;
	JPC_MotionQuality MotionQuality;
	bool EnhancedInternalEdgeRemoval;
	bool AllowSleeping;
	float Friction;
	float Restitution;
	float LinearDamping;
	float AngularDamping;
	float MaxLinearVelocity;
	float MaxAngularVelocity;
	float GravityFactor;
	uint NumVelocityStepsOverride;
	uint NumPositionStepsOverride;
	JPC_OverrideMassProperties OverrideMassProperties;
	float InertiaMultiplier;

	// MassProperties MassPropertiesOverride;

	const JPC_Shape* Shape;
} JPC_BodyCreationSettings;
extern void JPC_BodyCreationSettings_default(JPC_BodyCreationSettings* settings);
typedef struct JPC_BodyCreationSettings JPC_BodyCreationSettings;