sandbox/JoltC/fp_jolt.pas


type
  TJPC_FixedConstraintSettings = record
    ConstraintSettings: TJPC_ConstraintSettings;
    Space: TJPC_ConstraintSpace;
    AutoDetectPoint: Tbool;
    Point1: TJPC_RVec3;
    AxisX1: TJPC_Vec3;
    AxisY1: TJPC_Vec3;
    Point2: TJPC_RVec3;
    AxisX2: TJPC_Vec3;
    AxisY2: TJPC_Vec3;
  end;
  PJPC_FixedConstraintSettings = ^TJPC_FixedConstraintSettings;

procedure JPC_FixedConstraintSettings_default(settings: PJPC_FixedConstraintSettings); cdecl; external joltc;
function JPC_FixedConstraintSettings_Create(self: PJPC_FixedConstraintSettings; inBody1: PJPC_Body; inBody2: PJPC_Body): PJPC_Constraint; cdecl; external joltc;

type
  TJPC_SixDOFConstraintSettings = record
    ConstraintSettings: TJPC_ConstraintSettings;
    Space: TJPC_ConstraintSpace;
    Position1: TJPC_RVec3;
    AxisX1: TJPC_Vec3;
    AxisY1: TJPC_Vec3;
    Position2: TJPC_RVec3;
    AxisX2: TJPC_Vec3;
    AxisY2: TJPC_Vec3;
    MaxFriction: array[0..5] of single;
    LimitMin: array[0..5] of single;
    LimitMax: array[0..5] of single;
  end;
  PJPC_SixDOFConstraintSettings = ^TJPC_SixDOFConstraintSettings;

procedure JPC_SixDOFConstraintSettings_default(settings: PJPC_SixDOFConstraintSettings); cdecl; external joltc;
function JPC_SixDOFConstraintSettings_Create(self: PJPC_SixDOFConstraintSettings; inBody1: PJPC_Body; inBody2: PJPC_Body): PJPC_Constraint; cdecl; external joltc;

type
  TJPC_HingeConstraintSettings = record
    ConstraintSettings: TJPC_ConstraintSettings;
    Space: TJPC_ConstraintSpace;
    Point1: TJPC_RVec3;
    HingeAxis1: TJPC_Vec3;
    NormalAxis1: TJPC_Vec3;
    Point2: TJPC_RVec3;
    HingeAxis2: TJPC_Vec3;
    NormalAxis2: TJPC_Vec3;
    LimitsMin: single;
    LimitsMax: single;
    LimitsSpringSettings: TJPC_SpringSettings;
    MaxFrictionTorque: single;
    MotorSettings: TJPC_MotorSettings;
  end;
  PJPC_HingeConstraintSettings = ^TJPC_HingeConstraintSettings;

procedure JPC_HingeConstraintSettings_default(settings: PJPC_HingeConstraintSettings); cdecl; external joltc;
function JPC_HingeConstraintSettings_Create(self: PJPC_HingeConstraintSettings; inBody1: PJPC_Body; inBody2: PJPC_Body): PJPC_HingeConstraint; cdecl; external joltc;

type
  TJPC_DistanceConstraintSettings = record
    ConstraintSettings: TJPC_ConstraintSettings;
    Space: TJPC_ConstraintSpace;
    Point1: TJPC_RVec3;
    Point2: TJPC_RVec3;
    MinDistance: single;
    MaxDistance: single;
    LimitsSpringSettings: TJPC_SpringSettings;
  end;
  PJPC_DistanceConstraintSettings = ^TJPC_DistanceConstraintSettings;

procedure JPC_DistanceConstraintSettings_default(settings: PJPC_DistanceConstraintSettings); cdecl; external joltc;
function JPC_DistanceConstraintSettings_Create(self: PJPC_DistanceConstraintSettings; inBody1: PJPC_Body; inBody2: PJPC_Body): PJPC_DistanceConstraint; cdecl; external joltc;

type
  TJPC_SliderConstraintSettings = record
    ConstraintSettings: TJPC_ConstraintSettings;
    Space: TJPC_ConstraintSpace;
    AutoDetectPoint: Tbool;
    Point1: TJPC_RVec3;
    SliderAxis1: TJPC_Vec3;
    NormalAxis1: TJPC_Vec3;
    Point2: TJPC_RVec3;
    SliderAxis2: TJPC_Vec3;
    NormalAxis2: TJPC_Vec3;
    LimitsMin: single;
    LimitsMax: single;
    LimitsSpringSettings: TJPC_SpringSettings;
    MaxFrictionForce: single;
    MotorSettings: TJPC_MotorSettings;
  end;
  PJPC_SliderConstraintSettings = ^TJPC_SliderConstraintSettings;

procedure JPC_SliderConstraintSettings_default(settings: PJPC_SliderConstraintSettings); cdecl; external joltc;
function JPC_SliderConstraintSettings_Create(self: PJPC_SliderConstraintSettings; inBody1: PJPC_Body; inBody2: PJPC_Body): PJPC_SliderConstraint; cdecl; external joltc;

type
  TJPC_TriangleShapeSettings = record
    UserData: Tuint64_t;
    Density: single;
    V1: TJPC_Vec3;
    V2: TJPC_Vec3;
    V3: TJPC_Vec3;
    ConvexRadius: single;
  end;
  PJPC_TriangleShapeSettings = ^TJPC_TriangleShapeSettings;

procedure JPC_TriangleShapeSettings_default(obj: PJPC_TriangleShapeSettings); cdecl; external joltc;
function JPC_TriangleShapeSettings_Create(self: PJPC_TriangleShapeSettings; outShape: PPJPC_Shape; outError: PPJPC_String): Tbool; cdecl; external joltc;

type
  TJPC_MeshShapeSettings = record
    UserData: Tuint64_t;
    TriangleVertices: PJPC_Float3;
    TriangleVerticesLen: Tsize_t;
    IndexedTriangles: PJPC_IndexedTriangle;
    IndexedTrianglesLen: Tsize_t;
  end;
  PJPC_MeshShapeSettings = ^TJPC_MeshShapeSettings;

procedure JPC_MeshShapeSettings_default(obj: PJPC_MeshShapeSettings); cdecl; external joltc;
function JPC_MeshShapeSettings_Create(self: PJPC_MeshShapeSettings; outShape: PPJPC_Shape; outError: PPJPC_String): Tbool; cdecl; external joltc;

type
  TJPC_BoxShapeSettings = record
    UserData: Tuint64_t;
    Density: single;
    HalfExtent: TJPC_Vec3;
    ConvexRadius: single;
  end;
  PJPC_BoxShapeSettings = ^TJPC_BoxShapeSettings;

procedure JPC_BoxShapeSettings_default(obj: PJPC_BoxShapeSettings); cdecl; external joltc;
function JPC_BoxShapeSettings_Create(self: PJPC_BoxShapeSettings; outShape: PPJPC_Shape; outError: PPJPC_String): Tbool; cdecl; external joltc;

type
  TJPC_SphereShapeSettings = record
    UserData: Tuint64_t;
    Density: single;
    Radius: single;
  end;
  PJPC_SphereShapeSettings = ^TJPC_SphereShapeSettings;

procedure JPC_SphereShapeSettings_default(obj: PJPC_SphereShapeSettings); cdecl; external joltc;
function JPC_SphereShapeSettings_Create(self: PJPC_SphereShapeSettings; outShape: PPJPC_Shape; outError: PPJPC_String): Tbool; cdecl; external joltc;

type
  TJPC_CapsuleShapeSettings = record
    UserData: Tuint64_t;
    Density: single;
    Radius: single;
    HalfHeightOfCylinder: single;
  end;
  PJPC_CapsuleShapeSettings = ^TJPC_CapsuleShapeSettings;

procedure JPC_CapsuleShapeSettings_default(obj: PJPC_CapsuleShapeSettings); cdecl; external joltc;
function JPC_CapsuleShapeSettings_Create(self: PJPC_CapsuleShapeSettings; outShape: PPJPC_Shape; outError: PPJPC_String): Tbool; cdecl; external joltc;

type
  TJPC_CylinderShapeSettings = record
    UserData: Tuint64_t;
    Density: single;
    HalfHeight: single;
    Radius: single;
    ConvexRadius: single;
  end;
  PJPC_CylinderShapeSettings = ^TJPC_CylinderShapeSettings;

procedure JPC_CylinderShapeSettings_default(obj: PJPC_CylinderShapeSettings); cdecl; external joltc;
function JPC_CylinderShapeSettings_Create(self: PJPC_CylinderShapeSettings; outShape: PPJPC_Shape; outError: PPJPC_String): Tbool; cdecl; external joltc;

type
  TJPC_ConvexHullShapeSettings = record
    UserData: Tuint64_t;
    Density: single;
    Points: PJPC_Vec3;
    PointsLen: Tsize_t;
    MaxConvexRadius: single;
    MaxErrorConvexRadius: single;
    HullTolerance: single;
  end;
  PJPC_ConvexHullShapeSettings = ^TJPC_ConvexHullShapeSettings;

procedure JPC_ConvexHullShapeSettings_default(obj: PJPC_ConvexHullShapeSettings); cdecl; external joltc;
function JPC_ConvexHullShapeSettings_Create(self: PJPC_ConvexHullShapeSettings; outShape: PPJPC_Shape; outError: PPJPC_String): Tbool; cdecl; external joltc;

type
  TJPC_SubShapeSettings = record
    Shape: PJPC_Shape;
    Position: TJPC_Vec3;
    Rotation: TJPC_Quat;
    UserData: Tuint32_t;
  end;
  PJPC_SubShapeSettings = ^TJPC_SubShapeSettings;

procedure JPC_SubShapeSettings_default(obj: PJPC_SubShapeSettings); cdecl; external joltc;

type
  TJPC_StaticCompoundShapeSettings = record
    UserData: Tuint64_t;
    SubShapes: PJPC_SubShapeSettings;
    SubShapesLen: Tsize_t;
  end;
  PJPC_StaticCompoundShapeSettings = ^TJPC_StaticCompoundShapeSettings;

procedure JPC_StaticCompoundShapeSettings_default(obj: PJPC_StaticCompoundShapeSettings); cdecl; external joltc;
function JPC_StaticCompoundShapeSettings_Create(self: PJPC_StaticCompoundShapeSettings; outShape: PPJPC_Shape; outError: PPJPC_String): Tbool; cdecl; external joltc;

type
  PJPC_MutableCompoundShape = type Pointer;
  PPJPC_MutableCompoundShape = ^PJPC_MutableCompoundShape;

function JPC_MutableCompoundShape_AddShape(self: PJPC_MutableCompoundShape; inPosition: TJPC_Vec3; inRotation: TJPC_Quat; inShape: PJPC_Shape; inUserData: Tuint32_t): Tuint; cdecl; external joltc;
procedure JPC_MutableCompoundShape_RemoveShape(self: PJPC_MutableCompoundShape; inIndex: Tuint); cdecl; external joltc;
procedure JPC_MutableCompoundShape_ModifyShape(self: PJPC_MutableCompoundShape; inIndex: Tuint; inPosition: TJPC_Vec3; inRotation: TJPC_Quat); cdecl; external joltc;
procedure JPC_MutableCompoundShape_ModifyShape2(self: PJPC_MutableCompoundShape; inIndex: Tuint; inPosition: TJPC_Vec3; inRotation: TJPC_Quat; inShape: PJPC_Shape); cdecl; external joltc;
procedure JPC_MutableCompoundShape_AdjustCenterOfMass(self: PJPC_MutableCompoundShape); cdecl; external joltc;

type
  TJPC_MutableCompoundShapeSettings = record
    UserData: Tuint64_t;
    SubShapes: PJPC_SubShapeSettings;
    SubShapesLen: Tsize_t;
  end;
  PJPC_MutableCompoundShapeSettings = ^TJPC_MutableCompoundShapeSettings;

procedure JPC_MutableCompoundShapeSettings_default(obj: PJPC_MutableCompoundShapeSettings); cdecl; external joltc;
function JPC_MutableCompoundShapeSettings_Create(self: PJPC_MutableCompoundShapeSettings; outShape: PPJPC_MutableCompoundShape; outError: PPJPC_String): Tbool; cdecl; external joltc;

type
  TJPC_BodyCreationSettings = record
    Position: TJPC_RVec3;
    Rotation: TJPC_Quat;
    LinearVelocity: TJPC_Vec3;
    AngularVelocity: TJPC_Vec3;
    UserData: Tuint64_t;
    ObjectLayer: TJPC_ObjectLayer;
    MotionType: TJPC_MotionType;
    AllowedDOFs: TJPC_AllowedDOFs;
    AllowDynamicOrKinematic: Tbool;
    IsSensor: Tbool;
    CollideKinematicVsNonDynamic: Tbool;
    UseManifoldReduction: Tbool;
    ApplyGyroscopicForce: Tbool;
    MotionQuality: TJPC_MotionQuality;
    EnhancedInternalEdgeRemoval: Tbool;
    AllowSleeping: Tbool;
    Friction: single;
    Restitution: single;
    LinearDamping: single;
    AngularDamping: single;
    MaxLinearVelocity: single;
    MaxAngularVelocity: single;
    GravityFactor: single;
    NumVelocityStepsOverride: Tuint;
    NumPositionStepsOverride: Tuint;
    OverrideMassProperties: TJPC_OverrideMassProperties;
    InertiaMultiplier: single;
    Shape: PJPC_Shape;
    _pad: QWord;
  end;
  PJPC_BodyCreationSettings = ^TJPC_BodyCreationSettings;

procedure JPC_BodyCreationSettings_default(settings: PJPC_BodyCreationSettings); cdecl; external joltc;
